# CS250-Project

./: CMakeLists.txt  Course.cpp  Course.h  CourseList.cpp  CourseList.h  CourseListBigThree.cpp  CourseListInsertInOrder.cpp  Interface.cpp  Interface.h  Main.cpp
